# rust-agent

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  render.yaml
migrations/: 20260504000100_initial_core.sql  20260513000100_run_parent_metadata.sql  20260513000200_run_provider_request_id.sql  20260609000100_mongo_migration.sql  20260609000200_nextjs_postgres_completion.sql  20260611000100_file_sharing_and_preferences.sql  20260613000100_user_files.sql  20260626000100_personalization.sql
src/: config.rs  db.rs  main.rs  state.rs
src/agent/: anthropic.rs  context.rs  events.rs  github.rs  mod.rs  model_caps.rs  openai.rs  personalization.rs  prompt.rs  registry.rs  runner.rs  tools.rs  types.rs
src/agent/providers/: anthropic.rs  google.rs  mod.rs  openai.rs
src/codex/: bridge.rs  json_rpc.rs  mod.rs  types.rs
src/http/: admin.rs  agent.rs  agent_skills.rs  auth.rs  codex.rs  conversations.rs  error.rs  health.rs  integrations.rs  logs.rs  meta.rs  mod.rs  settings.rs  uploads.rs
src/tools/: crypto.rs  mod.rs
workspaces/019eb218-f7b1-75a3-86d4-e352a821579a/oxibrowser-temp/: Cargo.toml
