[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
axum = { version = "0.8.7", features = ["macros", "multipart"] }
base64ct = { version = "1.8.3", features = ["alloc"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
async-stream = "0.3.6"
async-trait = "0.1"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id", "util", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
reqwest = { version = "0.12.12", default-features = false, features = ["native-tls", "json", "stream", "blocking"] }
bytes = "1.7.2"
dashmap = "6.1.0"
ignore = "0.4.23"
shell-words = "1.1.0"
similar = "2.6.0"
aes-gcm = "0.10"
once_cell = "1.20.2"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
url = "2.5.4"
urlencoding = "2.1"
regex = "1"
html-escape = "0.2"
aisdk = "0.5.2"
mime_guess = "2"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
sysinfo = "0.33"
dirs = "6"
pdf-extract = "0.7"
